Infrastructure/istio/templates/authorization-policy/ingress-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: ingress-policy
spec:
  selector:
    matchLabels:
      app: istio
  action: DENY
  rules:
    - from:
        - source:
            notRemoteIpBlocks: [
                # 公司的 VPN IP
                "211.22.123.214",
                # SRE 的機器 IP
                "114.33.164.215",
                # jcp-tw-nat-router-ip-01
                "35.236.129.248",
                # Cron Job 的機器 IP (Dev)
                "34.81.189.243",
                # Cron Job 的機器 IP (Release)
                "34.81.60.228",
                # NIS 的機器 IP
                ## Release (Production、Release)
                "34.80.149.88",
                # 原鎧琳的機器 IP
                ## Release (Production、Release)
                "35.229.191.170",
                ## Release HA (Production、Release)
                "35.206.228.15",
                "35.221.142.73",
                ## Release DB
                "104.155.226.92",
                ## Release Samba
                "35.221.137.72",
                ## Demo
                "35.201.169.47",
                ## Qat
                "35.201.182.10",
                ## Dev
                "35.189.173.199",
              ]
      to:
        - operation:
            paths:
              - "/V1"
              - "/V1/*"
              - "/V1/"
              - "/V3"
              - "/V3/*"
              - "/V3/"
